# concurrent-priority-event-dispatcher

./: .gitignore  CMakeLists.txt  README.md  app.py  build.bat
include/: event.hpp  event_bus.hpp  handler_registry.hpp  stats_sampler.hpp  thread_pool.hpp
src/: event_bus.cpp  handler_registry.cpp  main.cpp  stats_sampler.cpp  thread_pool.cpp
tests/: test_latency_under_load.cpp  test_no_starvation.cpp  test_priority_ordering.cpp
visualizer/: app.js  index.html  style.css
